🐛 fix github actions for olm e2e
Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -49,5 +49,6 @@ jobs:
           echo ${{ secrets.MONDOO_CLIENT }} > creds.yaml
           make test/deployment
       - name: Clean up
+        run: |
           operator-sdk cleanup mondoo-operator --namespace mondoo-operator
           operator-sdk olm uninstall
