--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -193,8 +193,14 @@ jobs:
 
   # publish kubectl manifests
   run-release-manifests:
+    if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release-manifests.yaml
+    needs:
+      - build-operator
 
   # publish helm chart after the release of container images is complete
   run-release-helm:
+    if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release-helm-chart.yaml
+    needs:
+      - build-operator
