--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -143,7 +143,7 @@ jobs:
         run: |
           export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
           export OS=$(uname | awk '{print tolower($0)}')
-          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.17.0
+          export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.18.1
           curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
           gpg --keyserver keyserver.ubuntu.com --recv-keys 052996E2A20B5C7E
           curl -LO ${OPERATOR_SDK_DL_URL}/checksums.txt
@@ -190,6 +190,8 @@ jobs:
     uses: ./.github/workflows/e2e-olm.yaml
     needs:
       - build-bundle
+    with:
+      bundle-img: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle:${{ env.RELEASE }}
 
   # publish kubectl manifests
   run-release-manifests:
