--- a/config/manifests/patches/description.yaml
+++ b/config/manifests/patches/description.yaml
@@ -7,7 +7,7 @@
 
     - Continuous validation of deployed workloads
     - Continuous validation of Kubernetes nodes **without** priviledged access
-    - Admission Controller
+    - Admission Controller (coming soon)
 
     It is backed by Mondoo's powerful [Policy-as-Code](https://mondoo.com/docs/getstarted/policy-as-code) engine and [MQL](https://mondoo.com/docs/getstarted/policy-as-code#introducing-the-mondoo-query-language-mql). Mondoo ships out-of-the-box security polices for:
 
@@ -16,3 +16,40 @@
 
     Further information is available at [service-account-doc](https://github.com/mondoohq/mondoo-operator/blob/main/docs/user-manual-olm.md).
     ```
+
+    1. Install the operator
+
+    2. Configure the Mondoo Secret
+
+    - Create a new Mondoo service account to report assessments to [Mondoo Platform](https://mondoo.com/docs/platform/service_accounts)
+    - Store the service account json into a local file `creds.json`
+    - Store service account as a secret in the mondoo namespace via:
+
+    ```bash
+    kubectl create secret generic mondoo-client --namespace mondoo-operator --from-file=config=creds.json
+    ```
+
+    3. Create `mondoo-config.yaml`
+
+    ```yaml
+    apiVersion: k8s.mondoo.com/v1alpha1
+    kind: MondooAuditConfig
+    metadata:
+      name: mondoo-client
+      namespace: mondoo-operator
+    spec:
+      workloads:
+        enable: true
+        serviceAccount: mondoo-operator-workload
+      nodes:
+        enable: true
+      mondooSecretRef: mondoo-client
+    ```
+
+    Apply the configuration via:
+
+    ```bash
+    kubectl apply -f mondoo-config.yaml
+    ```
+
+    4. You can see the results in the [dashboard](https://console.mondoo.com)
