--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -81,6 +81,8 @@ spec:
                         type: object
                     type: object
                 type: object
+              serviceMonitorEnabled:
+                type: boolean
               webhooks:
                 properties:
                   certificateConfig:
@@ -147,6 +149,7 @@ spec:
                 type: object
             required:
             - mondooSecretRef
+            - serviceMonitorEnabled
             type: object
           status:
             description: MondooAuditConfigStatus defines the observed state of MondooAuditConfig
