🐛 reverse env variable handling and add github actions validation (#185)
* 🐛 reverse env variable handling and add github actions validation

Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

* 🧹 update names for github actions

Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/.github/workflows/validate-actions.yaml
+++ b/.github/workflows/validate-actions.yaml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Validate Github Actions
 on:
   pull_request:
   push:
@@ -9,7 +9,7 @@ on:
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
-    name: Unit tests
+    name: Verify Github Actions
     steps:
       - uses: actions/checkout@v2
       - name: Import environment variables from file
@@ -17,4 +17,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
-      - run: make test
+      - run: |
+          curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
+          export PATH=$PATH:./bin
+          make test/github-actions
