--- a/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha1_mondooauditconfig.yaml
@@ -11,6 +11,7 @@ spec:
     enable: true
   webhooks:
     enable: false
-  serviceMonitorEnabled: true
+  metrics:
+    enable: true
   mondooSecretRef: mondoo-client
   
