--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - k8s_v1alpha1_mondooauditconfig.yaml
+- k8s_v1alpha1_mondoooperatorconfig.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
