cleaup leftover status field in MondooAuditConfig
This has been moved into a condition under MondooOperatorConfig.

And remove the Metrics config from the sample MondooAuditConfig as that is now in MondooOperatorConfig

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -159,16 +159,13 @@ spec:
             description: MondooAuditConfigStatus defines the observed state of MondooAuditConfig
             properties:
               pods:
-                description: Nodes store the name of the pods which are running mondoo
-                  instances
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                  of cluster Important: Run "make" to regenerate code after modifying
+                  this file Nodes store the name of the pods which are running mondoo
+                  instances'
                 items:
                   type: string
                 type: array
-              prometheusApiStatus:
-                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                  of cluster Important: Run "make" to regenerate code after modifying
-                  this file'
-                type: string
             type: object
         type: object
     served: true
