--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -20,8 +20,8 @@ resources:
 #- auth_proxy_role_binding.yaml
 #- auth_proxy_client_clusterrole.yaml
 # Comment the following lines to self mangage roles for the workload
-- workload_service_account.yaml
-- workload_clusterrole.yaml
-- workload_clusterrolebinding.yaml
+- service_account_workloads.yaml
+- clusterrole_workloads.yaml
+- clusterrolebinding_workloads.yaml
 
 
