--- a/config/rbac/service_account_workloads.yaml
+++ b/config/rbac/service_account_workloads.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: mondoo-operator-workload
-  namespace: not-mondoo-operator
+  name: workload
+  namespace: system
