--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -73,7 +73,7 @@ jobs:
           kubectl apply -f config/rbac/service_account_workloads.yaml
           yq -i ".metadata.namespace= \"mondoo-operator-workload\"" config/samples/k8s_v1alpha1_mondooauditconfig.yaml
           kubectl apply -f config/samples/k8s_v1alpha1_mondooauditconfig.yaml
-          make test/deployment
+          make test/deployment-uncommon-ns
           make undeploy
 
   # Added to summarize the matrix and allow easy branch protection rules setup
