--- a/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
@@ -24,6 +24,12 @@ spec:
       kind: MondooAuditConfig
       name: mondooauditconfigs.k8s.mondoo.com
       version: v1alpha1
+    - description: MondooOperatorConfig is the Schema for the mondoooperatorconfigs
+        API
+      displayName: Mondoo Operator Config
+      kind: MondooOperatorConfig
+      name: mondoooperatorconfigs.k8s.mondoo.com
+      version: v1alpha1
   description: A Kubernetes Operator for creating and managing Mondoo controller instances.
   displayName: mondoo-operator
   icon:
