--- a/test/deployment-policy-uncommon-ns.yaml
+++ b/test/deployment-policy-uncommon-ns.yaml
@@ -26,7 +26,7 @@ policies:
 queries:
   - uid: namespace-exists
     title: Ensure the namespace exists
-    query: k8s.namespaces.one ( name == "mondoo-operator")
+    query: k8s.namespaces.one ( name == "not-mondoo-operator")
   - uid: crd-created
     title: Ensure the CRD for MondooScanConfig exitsts
     query: k8s.apiResources.one( kind == "MondooAuditConfig")
@@ -35,7 +35,7 @@ queries:
     query: k8s.deployments.one( name == "mondoo-operator-controller-manager" && namespace == "mondoo-operator" )
   - uid: deployment-exists
     title: Ensure the deployment is configured
-    query: k8s.deployments.one( name == "mondoo-client" && namespace == "mondoo-operator" )
+    query: k8s.deployments.one( name == "mondoo-client" && namespace == "not-mondoo-operator" )
   - uid: daemonset-exists
     title: Ensure the daemonset is configured
-    query: k8s.daemonsets.one( name == "mondoo-client" && namespace == "mondoo-operator" )
+    query: k8s.daemonsets.one( name == "mondoo-client" && namespace == "not-mondoo-operator" )
