wip. status update suggestion based on startupprobe
Signed-off-by: jensgrnb <jens.grunborg@endocode.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -158,6 +158,8 @@ spec:
           status:
             description: MondooAuditConfigStatus defines the observed state of MondooAuditConfig
             properties:
+              overallstatus:
+                type: string
               pods:
                 description: Pods store the name of the pods which are running mondoo
                   instances
